# libgeometry

geometry/: CMakeLists.txt  binmesh.cpp  binmesh.hpp  boost-geometry-convert.cpp  boost-geometry-convert.hpp  bvh.hpp  core.hpp  delaunay2d.cpp  delaunay2d.hpp  error.hpp  estimate-point-normals.cpp  estimate-point-normals.hpp  estimatePointNormals.cpp  faceclip.cpp  faceclip.hpp  forsyth.cpp  forsyth.hpp  geometry_all.hpp  geos-geometry-convert.cpp  geos-geometry-convert.hpp  gtsutils.cpp  gtsutils.hpp  kdtree.hpp  mesh-polygonization.cpp  mesh-polygonization.hpp  mesh-voxelizer.cpp  mesh-voxelizer.hpp  mesh.cpp  mesh.hpp  meshclip.cpp  meshop-bio.cpp  meshop-gts.cpp  meshop-openmesh.cpp  meshop.cpp  meshop.hpp  multipolygon-triangulate-gts.cpp  multipolygon-triangulate-gts.hpp  multipolymesh.cpp  multipolymesh.hpp  neighbors.hpp  (+24 more)
geometry/compat/boost/polygon/: README
geometry/detail/: hybrid-decimater.hpp  parse-obj.hpp  volume.mcubes.cpp  volume.mcubes.hpp  volume.utils.hpp
geometry/python/: CMakeLists.txt  geometrymodule.cpp  geometrymodule.hpp
geometry/test/: kdtree.cpp  nnquadtree.cpp  polyclip.cpp  test-kdtree.cpp
geometry/test-tools/: CMakeLists.txt  obj.cpp
